(Findbugs) [minor] new Integer(...) calls replaced with more efficient Integer.valueOf(...) or plain int literal values.
git-svn-id: svn://svn.jdownloader.org/jdownloader/trunk@14621 ebf7c1c2-ba36-0410-9fe8-c592906822b4